wrap aspects in stoplight

--- a/src/stoplight.module.scss
+++ b/src/stoplight.module.scss
@@ -1,6 +1,16 @@
+.stoplight {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 2vmin;
+  padding: 3vmin;
+  border: 1px solid hsl(40, 100%, 50%);
+  aspect-ratio: 1 / 3;
+}
+
 .aspect {
-  width: 100px;
-  height: 100px;
+  width: 30vmin;
+  height: 30vmin;
   background: var(--color, #666);
   border-radius: 50%;
 
@@ -11,13 +21,16 @@
   &[data-aspect='red'] {
     --color: hsl(0, 20%, 20%);
     --color-active: hsl(0, 61%, 50%);
+    --grid-area: red;
   }
   &[data-aspect='amber'] {
     --color: hsl(45, 20%, 20%);
     --color-active: hsl(45, 83%, 50%);
+    --grid-area: amber;
   }
   &[data-aspect='green'] {
     --color: hsl(124, 20%, 20%);
     --color-active: hsl(124, 63%, 50%);
+    --grid-area: green;
   }
 }
